kubernetes/traefik-guacamole.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`guacamole.arlyon.dev`)
    services:
    - name: guacamole
      namespace: guacamole
      port: 80
  tls:
    certResolver: ssl
---
kind: Service
apiVersion: v1
metadata:
  name: guacamole-external-name
  namespace: guacamole
  annotations:
    external-dns.alpha.kubernetes.io/hostname: guacamole.arlyon.dev
spec:
  type: ExternalName
  externalName: traefik.arlyon.dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replacepath
spec:
  addPrefix:
    prefix: /guacamole
